# gr8-limiter

./: .gitignore  README.md  go.mod
backend/: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yml  go.mod  go.sum  main.go  rate_limit.go  sqlc.yaml
backend/api/handlers/: deleteapikey.go  ratelimit.go  ratelimitt_test.go
backend/api/router/: router.go
backend/internal/analytics/: analytics.go
backend/internal/cache/: lrucache.go  lrucache_test.go
backend/internal/database/: db.go  db_test.go  models.go  postgres.go  querier.go  query.sql.go
backend/internal/database/migrations/: 000001_create_api_keys_table.up.sql
backend/internal/database/queries/: query.sql
backend/services/: ratelimit.go  ratelimit_test.go
backend/services/ratelimit/: ratelimit.go  ratelimit_test.go
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/neon/: neonclient.ts
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(auth)/sign-in/[[...sign-in]]/: page.tsx
frontend/src/app/(auth)/sign-up/[[...sign-up]]/: page.tsx
frontend/src/app/(user)/dashboard/: data.ts  layout.tsx  page.tsx
frontend/src/app/api/apikey/: route.ts
frontend/src/components/ui/: apikeytable.tsx  dashboardtiles.tsx  hero.tsx  icons.tsx  navbar.tsx
lib/: go.mod
rs/: Cargo.toml
rs/src/: main.rs
services/gr8-limiter/: go.mod
