[package]
name = "gr8-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
axum-macros = "0.4.0"
chrono = "0.4.31"
redis = "0.24.0"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
